--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Куда я поеду</title>
 </head>
 <body class="page">
   <div class="page__container">
-    <header class="header"></header>
-    <main class="content"></main>
+    <header class="header">
+      <nav class="header__links">
+        <ul class="header__list">
+          <li class="header__list-item"><a href="#" target="_blank" class="header__link header__link_menu">Мечты</a>
+          <li class="header__list-item"><a href="#" target="_blank" class="header__link header__link_menu">Ожидания</a>
+          <li class="header__list-item"><a href="#" target="_blank" class="header__link header__link_menu">Реальность</a>
+        </ul>
+        </nav> 
+      <a href="#" target="_self" class="header__link header__link_complain">Пожаловаться</a>
+    </header>
+    <main class="content">
+      <section class="intro">
+        <div class="intro__text">
+          <h1 class="intro__title">куда я поеду</h1>
+          <p class="intro__subtitle">Куда я поеду сразу, как можно будет куда-то поехать</p>
+        </div>
+        <div class="intro__image"></div>
+      </section>
+    </main>
     <foooter class="footer"></foooter>
   </div>
 </body>
