делаю блок form

--- a/index.html
+++ b/index.html
@@ -22,11 +22,20 @@
     <main class="content">
       <section class="intro">
         <div class="intro__text-container">
-          <h1 class="section__title-flex">куда я поеду</h1>
-          <p class="section__subtitle-flex section_subtitle-flex_intro">Куда я поеду сразу, как можно будет куда-то поехать</p>
+          <h1 class="section-title">куда я поеду</h1>
+          <p class="section-subtitle section-subtitle_intro">Куда я поеду сразу, как можно будет куда-то поехать</p>
         </div>
         <div class="intro__image"></div>
       </section>
+      <section class="form">
+        <div class="form__left-side">
+          <h2 class="form__title">Так куда же я поеду?</h2>
+          <input rows="1" placeholder="    Я поеду ..." class="form__input form__input_smal"></input>
+          <textarea class="form__input form__input_large" placeholder="    Потому что я ..."></textarea>
+        </div>
+        <div class="form__rigth-side"></div>
+      </section>
+
     </main>
     <foooter class="footer"></foooter>
   </div>
