--- a/index.html
+++ b/index.html
@@ -27,17 +27,78 @@
         </div>
         <div class="intro__image"></div>
       </section>
+      <section class="grid-box">
+        <div class="grid-area">
+          <img class="grid-box__image" src="./images/places-forest.jpeg" alt="лес">
+          <div class="grid-box__content">
+            <h2 class="grid-box__title">Поеду в лес</h2>
+            <p class="grid-box__paragraph">Лес — экологическая система, биоценоз, в которой главной жизненной формой являются
+              деревья.</p>
+            <p class="grid-box__paragraph">Лес — составная часть природы, понятие «лес» можно рассматривать на разных уровнях.
+              В глобальном масштабе — это часть биосферы, в локальном — это может быть насаждение. Леса занимают около трети
+              площади суши.</p>
+          </div>
+          <div class="grid-box__content grid-box_inverse_content">
+            <h2 class="grid-box__title">Поеду в горы</h2>
+            <p class="grid-box__paragraph">Горные системы занимают 64 % поверхности Азии, 36 % — Северной Америки, 25 % —
+              Европы, 22 % — Южной Америки, 17 % — Австралии и 3 % — Африки. В целом 24 % земной поверхности приходится на
+              горы. 10 % всех людей живёт на территории гор. В горах берёт своё начало большинство рек Земли.</p>
+          </div>
+          <img class="grid-box__image grid-box__inverse_image" src="./images/places-mountains.jpeg" alt="горы">
+          <img class="grid-box__image" src="./images/places-black-sea2.png" alt="море">
+          <div class="grid-box__content">
+            <h2 class="grid-box__title">Поеду на Чёрное море</h2>
+            <p class="grid-box__paragraph">Я уплыву туда, где ни разу я не был, туда, где никто раньше не был. Никто и никогда
+              раньше не был, я уплыву. Я позову тебя смотреть на синее небо и пить по капле синее небо, и падать в это синее
+              небо, я позову.</p>
+            <p class="grid-box__paragraph">Уеду я на Чёрное-Чёрное море, на Чёрное-Чёрное море, на Чёрное-Чёрное море уеду я.
+              Уеду я на Чёрное-Чёрное море, на Чёрное-Чёрное море, на Чёрное-Чёрное море.</p>
+            <p class="grid-box__paragraph">Уеду я.</p>
+          </div>
+        </div>
+      </section>
+      <section class="talk-travel">
+        <h3 class="talk-travel__title">люди</h3>
+        <p class="talk-travel__subtitle">Что говорят и говорили люди о путешествиях</p>
+        <div class="flex-box">
+          <div class="flex-box__item">
+            <h4 class="flex-box__title">ЧИван Бунин</h4>
+            <p class="flex-box__paragraph">Человека делают счастливым три вещи: любовь, интересная работа и возможность
+              путешествовать.</p>
+          </div>
+          <div class="flex-box__item">
+            <h4 class="flex-box__title">Альбер Камю</h4>
+            <p class="flex-box__paragraph">Путешествие как самая великая и серьезная наука помогает нам вновь обрести себя.
+            </p>
+          </div>
+          <div class="flex-box__item">
+            <h4 class="flex-box__title">Норвежская пословица</h4>
+            <p class="flex-box__paragraph">Лишь тот, кто странствует, открывает новые пути.</p>
+          </div>
+          <div class="flex-box__item">
+            <h4 class="flex-box__title">Мария Захарова</h4>
+            <p class="flex-box__paragraph">В принципе зарубежная поездка – это серьезнейшее, ответственнейшее и очень
+              рискованное предприятие.</p>
+          </div>
+        </div>
+      </section>
       <section class="form">
         <div class="form__left-side">
           <h2 class="form__title">Так куда же я поеду?</h2>
-          <input rows="1" placeholder="    Я поеду ..." class="form__input form__input_smal"></input>
-          <textarea class="form__input form__input_large" placeholder="    Потому что я ..."></textarea>
+          <input rows="1" placeholder="   Я поеду ..." class="form__input form__input_smal"></input>
+          <textarea class="form__input form__input_large" placeholder="   Потому что я ..."></textarea>
+          <button class="form__button">Поехали уже куда-нибудь!</button>
         </div>
         <div class="form__rigth-side"></div>
       </section>
-
+      <section class="haden-daden">
+        <iframe class="haden-daden__video" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/JGNiMutYBm4"
+          frameborder="0" allowfullscreen></iframe>
+      </section>
     </main>
-    <foooter class="footer"></foooter>
+    <foooter class="footer">
+      <h2 class="footer__title">&copy; 2021</h2>
+    </foooter>
   </div>
 </body>
 </html>
