нужно доделать адаптив для последних трех блоков

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p class="section-subtitle section-subtitle__talk-travel">Что говорят и говорили люди о путешествиях</p>
         <div class="flex-box">
           <div class="flex-box__item">
-            <h4 class="flex-box__title">ЧИван Бунин</h4>
+            <h4 class="flex-box__title">Иван Бунин</h4>
             <p class="flex-box__paragraph">Человека делают счастливым три вещи: любовь, интересная работа и возможность
               путешествовать.</p>
           </div>
